# mapmaker

./: .bazelignore  .bazelrc  .editorconfig  .gitignore  .gitmodules  .mcp.json  .profileconfig.json  BUILD.bazel  LICENSE.md  MODULE.bazel  README.md  WORKSPACE  anim-note.md  build.gradle  build.gradle.kts  docker-compose-setup.sh  docker-compose.yml  gradle.properties  kill.sh  mapmaker-dev-0.1.0.tgz  mapmaker.bazelproject  modules.md  packsquash.toml  projectview.bazelproject  settings.gradle.kts  test.http  todo-commands.md  toolchain_util.bzl
modules/animated-java/: BUILD.bazel  armorstand-unbaked.json  build.gradle.kts  house.json  mymodel_out.json  mymodel_out_baked.json
modules/animated-java/src/main/java/net/hollowcube/aj/: Animation.java  DemoServer.java  ExampleServer.java  Model.java  ModelLoader.java  ModelMath.java  Node.java  ResourcePackGen.java  SpawnedModel.java  SpawnedModelImpl.java  Texture.java  Transform.java  Variant.java
modules/animated-java/test-rp/: pack.mcmeta
modules/animated-java/test-rp/assets/animated_java/models/item/armor_stand/: 215d1b02-0e64-a794-1b88-a9c5a6d7541c.json  4f000ffc-11d6-3a4b-7c8d-6b5ba483228c.json  55b812fe-7e4c-b2a5-da5b-3a8c82f9fc69.json  60d50d30-a018-429d-ba78-c5fb5804dd8a.json  6c53311f-ffc8-e567-ff1b-65840698e9ba.json  808e3c26-7285-af3f-a079-d8b899176dd3.json  98795982-9c43-6e3e-eed9-2c776a957938.json  b5b52d2c-097c-08df-6457-372fbae12445.json
modules/animated-java/test-rp/assets/animated_java/models/item/blueprint/: 6ef555e2-76de-957f-db47-33d1c1e53cd3.json  8a070397-69d7-3ce7-7201-290f9f9ff4b3.json
modules/animated-java/test-rp/assets/minecraft/models/item/: white_dye.json
modules/anticheat/: BUILD.bazel
modules/anticheat/src/main/java/net/hollowcube/anticheat/: AntiCheat.java
modules/canvas/: BUILD.bazel  build.gradle.kts
modules/canvas/api/: build.gradle.kts
modules/canvas/impl-mock/: build.gradle.kts
modules/canvas/impl-section/: build.gradle.kts
modules/canvas/impl-section/src/test/resources/lang/: en_US.properties
modules/canvas/impl-standalone/: README.md  build.gradle.kts
modules/canvas/impl-standalone/src/test/resources/lang/: en_US.properties
modules/canvas/src/main/java/net/hollowcube/canvas/: ClickHandler.java  Element.java  HistoryStack.java  ItemSection.java  Label.java  Pagination.java  ParentSection.java  RootSection.java  RouterSection.java  Section.java  SectionHostingView.java  SectionLike.java  Switch.java  View.java
modules/canvas/src/test/java/net/hollowcube/canvas/: DemoServer.java  TestSection.java
modules/canvas/src/test/java/suites/: IntegrationTests.java  UnitTests.java
modules/canvas/src/test/resources/lang/: en_US.properties
modules/chat/: BUILD.bazel  build.gradle.kts
modules/chat/src/main/java/net/hollowcube/chat/: ChatFacet.java  ChatMessage.java  ChatQuery.java  Emote.java
modules/chat/src/test/java/net/hollowcube/chat/: TestChatFacet.java  TestChatQuery.java
modules/chat/src/test/resources/fixtures/: chat_messages.json
modules/command/: BUILD.bazel  build.gradle.kts  help.md  traits.md
modules/command/src/main/java/net/hollowcube/command/: Command.java  CommandBuilder.java  CommandCondition.java  CommandContext.java  CommandContextImpl.java  CommandDoc.java  CommandExecutor.java  CommandManager.java  CommandManager2.java  CommandManager2Impl.java  CommandManagerImpl.java  CommandNode.java  CommandResult.java  CommandResultImpl.java  HelpCommand.java  RootCommandNode.java  (+1 more)
modules/common/: BUILD.bazel  README.md  build.gradle.kts
modules/common/src/test/java/a/: Main.java
modules/common/src/test/resources/lang/: en_US.properties
modules/compat/: BUILD.bazel  build.gradle.kts
modules/core/: BUILD.bazel  build.gradle.kts
modules/datafixerupper/: BUILD.bazel  README.md  build.gradle.kts
modules/fx/: BUILD.bazel  README.md
modules/hub/: BUILD.bazel  README.md  build.gradle.kts
modules/hub/src/main/resources/motw/: motw_num_4.schem  motw_num_5.schem  motw_num_6.schem  motw_num_7.schem  motw_num_8.schem
modules/hub/src/main/resources/spawn/: 5f29fead-e88c-44a8-8a75-e8ae3f68baed  hcspawn.polar
modules/map/: BUILD.bazel  README.md  build.gradle.kts
modules/map-core/: BUILD.bazel  build.gradle.kts
modules/map-core/src/proto/: biomes.proto
modules/nbs/: BUILD.bazel  build.gradle.kts
modules/nbs/src/main/resources/: Spirit of Adventure.nbs
modules/posthog/: BUILD.bazel
modules/replay/: BUILD.bazel  FORMAT.md  build.gradle.kts
modules/script-engine/: BUILD.bazel  build.gradle.kts
modules/script-engine/builtin/: .gitignore  build.gradle.kts  package-lock.json  package.json
modules/script-engine/builtin/builder/: main.ts
modules/script-engine/builtin/src/gui/lib/: back-button.tsx  confirm.tsx
modules/script-engine/builtin/src/gui/map_browser/: map-browser-view.tsx
modules/script-engine/builtin/src/gui/store/: addons-tab.tsx  cubits-tab.tsx  hypercube-tab.tsx  store-view.tsx
modules/script-engine/builtin/types/: global.d.ts  jsx.d.ts  mapmaker.d.ts
modules/script-engine/npm/: build.gradle.kts  package-lock.json  package.json
modules/terraform/: BUILD.bazel  README.md  block_entity_notes.md  build.gradle.kts  network.md
modules/terraform/src/main/resources/: legacy_ids.json
modules/terraform/src/shim/java/org/bukkit/: Bukkit.java  ChatColor.java
modules/terraform/src/test/resources/: big-schem-test.schem  small.schem  vent.schem
modules/terraform/src/test/resources/schemtests/: dirtydan16_loadfail.schem  pumpkinstandtado.schematic
modules/terraform/src/test/resources/snapshots/: net_hollowcube_terraform_compat_metabrush_brush_TestMetaBallBrushSnapshot-testInitial-1496723150  net_hollowcube_terraform_snapshot_TestSetBlocksIntegration-abc  net_hollowcube_terraform_snapshot_TestSetBlocksIntegration-abc-1190531415
modules/test/: BUILD.bazel  build.gradle.kts
modules/test/src/main/resources/: logback.xml
tools/compile/: BUILD.bazel  README.md  build.gradle.kts
tools/compile/src/main/resources/: burningwave.static.properties
tools/luau-ap/: BUILD.bazel
tools/ni-helper/: BUILD.bazel
(+5580 files in other folders)
