load("@rules_java//java:defs.bzl", "java_binary")
load("//:toolchain_util.bzl", "add_zulu_toolchain")
load(
    "@bazel_tools//tools/jdk:default_java_toolchain.bzl",
    "BASE_JDK9_JVM_OPTS",
    "DEFAULT_JAVACOPTS",
    "DEFAULT_TOOLCHAIN_CONFIGURATION",
    "default_java_toolchain",
)

default_java_toolchain(
    name = "azul_jdk20",
    configuration = DEFAULT_TOOLCHAIN_CONFIGURATION,
    java_runtime = select({
        "@platforms//os:macos": "@zulu_20_macos_aarch64//:jdk",  # todo x86 support
        "@platforms//os:linux": "@zulu_20_linux_x64//:jdk",
        "@platforms//os:windows": "@zulu_20_windows_x64//:jdk",
    }),
    javacopts = DEFAULT_JAVACOPTS + [
        "--enable-preview",
        "--add-modules",
        "jdk.incubator.concurrent",
    ],
    jvm_opts = BASE_JDK9_JVM_OPTS + ["--enable-preview"],
    source_version = "20",
    target_version = "20",
)

load("//bin/packer:packer.bzl", "packer_bundle")

packer_bundle(
    name = "development",
    srcs = glob(include = [
        "resources/**/*",
    ]) + [
        "//bin/packer:build_client.py",
        "//bin/packer:build_server.py",
    ],
    visibility = ["//visibility:public"],
)

java_binary(
    name = "development",
    srcs = glob(include = [
        "bin/development/src/main/java/**/*.java",
    ]),
    main_class = "net.hollowcube.mapmaker.dev.DevServer",
    resources = glob(include = [
        "bin/development/src/main/resources/**/*",
    ]) + [
        ":packer_development_server",
    ],
    deps = [
        "//modules/canvas:api",
        "//modules/canvas:impl-standalone",
        "//modules/common",
        "//modules/core",
        "//modules/hub",
        "//modules/map",
        "//modules/terraform",
        "//third_party:adventure_all",
        "//third_party:auto_service",
        "//third_party:helidon",
        "//third_party:minestom",
        "//third_party:spicedb",
        "@maven//:ch_qos_logback_logback_classic",
        "@maven//:com_google_code_gson_gson",
        "@maven//:io_getunleash_unleash_client_java",
        "@maven//:io_github_jglrxavpok_hephaistos_common",
        "@maven//:io_helidon_webserver_helidon_webserver",
        "@maven//:io_prometheus_simpleclient",
        "@maven//:io_prometheus_simpleclient_hotspot",
        "@maven//:io_pyroscope_agent",
        "@maven//:it_unimi_dsi_fastutil",
        "@maven//:org_jetbrains_kotlin_kotlin_stdlib",
        "@maven//:org_slf4j_jul_to_slf4j",
        "@maven//:org_spongepowered_configurate_core",
        "@maven//:org_spongepowered_configurate_yaml",
    ],
)
