load("@rules_java//java:defs.bzl", "java_binary")
load("//:toolchain_util.bzl", "add_zulu_toolchain")
load(
    "@bazel_tools//tools/jdk:default_java_toolchain.bzl",
    "BASE_JDK9_JVM_OPTS",
    "DEFAULT_JAVACOPTS",
    "DEFAULT_TOOLCHAIN_CONFIGURATION",
    "default_java_toolchain",
)

default_java_toolchain(
    name = "azul_jdk20",
    configuration = DEFAULT_TOOLCHAIN_CONFIGURATION,
    java_runtime = select({
        "@platforms//os:macos": "@zulu_20_macos_aarch64//:jdk",  # todo x86 support
        "@platforms//os:linux": "@zulu_20_linux_x64//:jdk",
        "@platforms//os:windows": "@zulu_20_windows_x64//:jdk",
    }),
    javacopts = DEFAULT_JAVACOPTS + [
        "--enable-preview",
        "--add-modules",
        "jdk.incubator.concurrent",
    ],
    jvm_opts = BASE_JDK9_JVM_OPTS + ["--enable-preview"],
    source_version = "20",
    target_version = "20",
)

load("//bin/packer:packer.bzl", "packer_bundle")

packer_bundle(
    name = "development",
    srcs = glob(include = [
        "resources/**/*",
    ]) + [
        "//bin/packer:build_client.py",
        "//bin/packer:build_server.py",
    ],
    visibility = ["//visibility:public"],
)
