load("@rules_java//java:defs.bzl", "java_binary")
load("//bin/packer:packer.bzl", "packer_bundle")

packer_bundle(
    name = "development",
    srcs = glob(include = [
        "resources/**/*",
    ]) + [
        "//bin/packer:build_client.py",
        "//bin/packer:build_server.py",
    ],
    visibility = ["//visibility:public"],
)
