load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "anticheat",
    srcs = glob(include = ["src/main/java/**/*.java"]),
    resources = glob(include = ["src/main/resources/**/*"]),
    visibility = ["//visibility:public"],
    deps = [
        "//third_party:auto_service",
        "//modules/common",
        "//third_party:minestom",
        "@maven//:dev_hollowcube_posthog_java",
        "@maven//:it_unimi_dsi_fastutil",
        "@maven//:net_kyori_adventure_api",
        "@maven//:org_jetbrains_annotations",
    ],
)
