load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "api",
    srcs = glob(include = ["api/src/main/java/**/*.java"]),
    resources = glob(include = ["api/src/main/resources/**/*"]),
    visibility = ["//visibility:public"],
    deps = [
        "//third_party:minestom",
        "@maven//:net_kyori_adventure_api",
        "@maven//:net_kyori_adventure_text_serializer_plain",
        "@maven//:dev_hollowcube_posthog_java",
        "@maven//:org_jetbrains_annotations",
        "@maven//:org_slf4j_slf4j_api",
    ],
)

java_library(
    name = "impl-standalone",
    srcs = glob(include = ["impl-standalone/src/main/java/**/*.java"]),
    resources = glob(include = ["impl-standalone/src/main/resources/**/*"]),
    visibility = ["//visibility:public"],
    deps = [
        ":api",
        "//modules/common",
        "//modules/compat",
        "//third_party:minestom",
        "@maven//:com_google_code_gson_gson",
        "@maven//:dev_hollowcube_posthog_java",
        "@maven//:net_kyori_adventure_api",
    ],
)
