load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "chat",
    srcs = glob(include = ["src/main/java/**/*.java"]),
    resources = glob(include = ["src/main/resources/**/*"]),
    visibility = ["//visibility:public"],
    deps = [
        "//modules/common",
        "//third_party:minestom",
        "@maven//:net_kyori_adventure_api",
    ],
)
