load("@rules_java//java:defs.bzl", "java_library")
load("@contrib_rules_jvm//java:defs.bzl", "JUNIT5_DEPS", "java_junit5_test")

java_library(
    name = "command",
    srcs = glob(include = ["src/main/java/**/*.java"]),
    resources = glob(include = ["src/main/resources/**/*"]),
    visibility = ["//visibility:public"],
    deps = [
        "//modules/common",
        "//third_party:minestom",
        "@maven//:io_github_jglrxavpok_hephaistos_common",
        "@maven//:it_unimi_dsi_fastutil",
        "@maven//:net_kyori_adventure_api",
        "@maven//:org_jetbrains_annotations",
    ],
)

java_junit5_test(
    name = "command_test",
    srcs = glob(include = ["src/test/java/**/*.java"]),
    resources = glob(include = ["src/test/resources/**/*"]),
    test_class = "net.hollowcube.command.CommandTestSuite",
    deps = [
        ":command",
        "//modules/test",
        "//third_party:minestom",
        "@maven//:it_unimi_dsi_fastutil",
        "@maven//:net_kyori_adventure_api",
        "@maven//:net_kyori_adventure_text_serializer_plain",
        "@maven//:org_jetbrains_kotlin_kotlin_stdlib",
    ],
)

java_binary(
    name = "command_demo_server",
    srcs = glob(include = ["src/test/java/**/*.java"]),
    main_class = "net.hollowcube.command.demo.DemoServer",
    resources = glob(include = ["src/test/resources/**/*"]),
    deps = [
        ":command",
        "//modules/test",
        "//third_party:minestom",
        "@maven//:it_unimi_dsi_fastutil",
        "@maven//:net_kyori_adventure_api",
        "@maven//:net_kyori_adventure_text_serializer_plain",
        "@maven//:org_jetbrains_kotlin_kotlin_stdlib",
    ],
)
