load("@rules_java//java:defs.bzl", "java_library")
load("@contrib_rules_jvm//java:defs.bzl", "JUNIT5_DEPS", "java_junit5_test")

java_library(
    name = "core",
    srcs = glob(include = ["src/main/java/**/*.java"]),
    resources = glob(include = ["src/main/resources/**/*"]),
    visibility = ["//visibility:public"],
    exports = [
        "//modules/command",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_inject_guice",
        "@maven//:org_apache_kafka_kafka_clients",
    ],
    deps = [
        "//modules/canvas:api",
        "//modules/command",
        "//modules/common",
        "//third_party:helidon",
        "//third_party:minestom",
        "//third_party:spicedb",
        "@maven//:com_github_ben_manes_caffeine_caffeine",
        "@maven//:com_github_hollow_cube_datafixerupper",
        "@maven//:com_google_code_gson_gson",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_inject_guice",
        "@maven//:dev_hollowcube_polar",
        "@maven//:io_getunleash_unleash_client_java",
        "@maven//:io_github_jglrxavpok_hephaistos_common",
        "@maven//:io_prometheus_simpleclient",
        "@maven//:io_prometheus_simpleclient_hotspot",
        "@maven//:net_kyori_adventure_api",
        "@maven//:net_kyori_adventure_text_minimessage",
        "@maven//:net_kyori_adventure_text_serializer_gson",
        "@maven//:net_kyori_adventure_text_serializer_plain",
        "@maven//:org_apache_kafka_kafka_clients",
        "@maven//:org_slf4j_jul_to_slf4j",
        "@maven//:org_spongepowered_configurate_core",
        "@maven//:org_spongepowered_configurate_yaml",
    ],
)

java_junit5_test(
    name = "core_test",
    srcs = glob(include = ["src/test/java/**/*.java"]),
    resources = glob(include = ["src/test/resources/**/*"]),
    test_class = "net.hollowcube.mapmaker.CoreTestSuite",
    deps = [
        ":core",
        "//modules/test",
        "//third_party:minestom",
        "@maven//:it_unimi_dsi_fastutil",
        "@maven//:net_kyori_adventure_api",
        "@maven//:net_kyori_adventure_text_serializer_plain",
        "@maven//:org_jetbrains_kotlin_kotlin_stdlib",
    ],
)
