load("@contrib_rules_jvm//java:defs.bzl", "JUNIT5_DEPS", "java_junit5_test")
load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "core",
    srcs = glob(include = ["src/main/java/**/*.java"]),
    resources = glob(include = ["src/main/resources/**/*"]),
    visibility = ["//visibility:public"],
    exports = [
        "//modules/command",
        "@maven//:org_apache_kafka_kafka_clients",
    ],
    deps = [
        "//modules/canvas:api",
        "//modules/command",
        "//modules/common",
        "//third_party:minestom",
        "//third_party:otel",
        "@maven//:com_github_ben_manes_caffeine_caffeine",
        "@maven//:com_google_code_gson_gson",
        "@maven//:com_miguelfonseca_completely_completely_core",
        "@maven//:dev_hollowcube_dataconverter",
        "@maven//:dev_hollowcube_polar",
        "@maven//:dev_hollowcube_posthog_java",
        "@maven//:info_debatty_java_string_similarity",
        "@maven//:io_prometheus_simpleclient",
        "@maven//:io_prometheus_simpleclient_hotspot",
        "@maven//:io_prometheus_simpleclient_httpserver",
        "@maven//:it_unimi_dsi_fastutil",
        "@maven//:net_kyori_adventure_api",
        "@maven//:net_kyori_adventure_key",
        "@maven//:net_kyori_adventure_nbt",
        "@maven//:net_kyori_adventure_text_minimessage",
        "@maven//:net_kyori_adventure_text_serializer_gson",
        "@maven//:net_kyori_adventure_text_serializer_plain",
        "@maven//:org_apache_kafka_kafka_clients",
        "@maven//:org_jctools_jctools_core",
        "@maven//:org_slf4j_jul_to_slf4j",
    ],
)

java_junit5_test(
    name = "core_test",
    srcs = glob(include = ["src/test/java/**/*.java"]),
    resources = glob(include = ["src/test/resources/**/*"]),
    test_class = "net.hollowcube.mapmaker.CoreTestSuite",
    deps = [
        ":core",
        "//modules/test",
        "//third_party:minestom",
        "@maven//:it_unimi_dsi_fastutil",
        "@maven//:net_kyori_adventure_api",
        "@maven//:net_kyori_adventure_text_serializer_plain",
    ],
)
