load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "fx",
    srcs = glob(include = ["src/main/java/**/*.java"]),
    resources = glob(include = ["src/main/resources/**/*"]),
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:org_jetbrains_annotations",
    ],
)
