load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "hub",
    srcs = glob(include = ["src/main/java/**/*.java"]),
    resources = glob(include = ["src/main/resources/**/*"]),
    visibility = ["//visibility:public"],
    deps = [
        "//modules/canvas:api",
        "//modules/common",
        "//modules/core",
        "//modules/map-core",
        "//modules/terraform",  # Included for schematics, todo both terraform and this module should get schem from central
        "//third_party:helidon",
        "//third_party:minestom",
        "@maven//:com_google_code_gson_gson",
        "@maven//:com_miguelfonseca_completely_completely_core",
        "@maven//:dev_hollowcube_polar",
        "@maven//:io_prometheus_simpleclient",
        "@maven//:net_kyori_adventure_api",
        "@maven//:net_kyori_adventure_key",
        "@maven//:net_kyori_adventure_text_serializer_plain",
    ],
)
