load("@contrib_rules_jvm//java:defs.bzl", "JUNIT5_DEPS", "java_junit5_test")
load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "map-core",
    srcs = glob(include = ["src/main/java/**/*.java"]),
    resources = glob(include = ["src/main/resources/**/*"]),
    visibility = ["//visibility:public"],
    deps = [
        "//modules/canvas:api",
        "//modules/common",
        "//modules/core",
        "//modules/terraform",
        "//third_party:minestom",
        "@maven//:com_google_code_gson_gson",
        "@maven//:dev_hollowcube_dataconverter",
        "@maven//:dev_hollowcube_mql",
        "@maven//:dev_hollowcube_polar",
        "@maven//:io_opentelemetry_opentelemetry_api",
        "@maven//:io_opentelemetry_opentelemetry_context",
        "@maven//:io_opentelemetry_opentelemetry_exporter_logging",
        "@maven//:io_opentelemetry_opentelemetry_exporter_otlp",
        "@maven//:io_opentelemetry_opentelemetry_sdk",
        "@maven//:io_opentelemetry_opentelemetry_sdk_common",
        "@maven//:io_opentelemetry_opentelemetry_sdk_trace",
        "@maven//:io_opentelemetry_semconv_opentelemetry_semconv",
        "@maven//:io_prometheus_simpleclient",
        "@maven//:io_prometheus_simpleclient_hotspot",
        "@maven//:io_prometheus_simpleclient_httpserver",
        "@maven//:io_pyroscope_agent",
        "@maven//:it_unimi_dsi_fastutil",
        "@maven//:net_kyori_adventure_api",
        "@maven//:net_kyori_adventure_nbt",
        "@maven//:net_kyori_adventure_text_serializer_gson",
        "@maven//:org_slf4j_jul_to_slf4j",
    ],
)

java_junit5_test(
    name = "map-core_test",
    srcs = glob(include = ["src/test/java/**/*.java"]),
    resources = glob(include = ["src/test/resources/**/*"]),
    test_class = "net.hollowcube.mapmaker.map.MapCoreTestSuite",
    deps = [
        ":map-core",
        "//modules/terraform",
        "//modules/test",
        "@maven//:net_minestom_minestom_snapshots",
    ],
)
