load("@contrib_rules_jvm//java:defs.bzl", "JUNIT5_DEPS", "java_junit5_test")
load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "map",
    srcs = glob(include = ["src/main/java/**/*.java"]),
    resources = glob(include = ["src/main/resources/**/*"]),
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:dev_hollowcube_dataconverter",
        "@maven//:net_kyori_adventure_nbt",
        "@maven//:net_kyori_adventure_text_serializer_gson",
        "//modules/canvas:api",
        "//modules/command",
        "//modules/common",
        "//modules/core",
        "//modules/map-core",
        "//modules/replay",
        "//modules/terraform",
        "//third_party:minestom",
        "//third_party:otel",
        "@maven//:com_google_code_gson_gson",
        "@maven//:dev_hollowcube_polar",
        "@maven//:it_unimi_dsi_fastutil",
        "@maven//:net_kyori_adventure_api",
        "@maven//:io_prometheus_simpleclient",
        "@maven//:com_miguelfonseca_completely_completely_core",
        "@maven//:net_kyori_adventure_text_serializer_plain",
        "@maven//:net_kyori_adventure_text_minimessage",
    ],
)

java_junit5_test(
    name = "map_test",
    srcs = glob(include = ["src/test/java/**/*.java"]),
    resources = glob(include = ["src/test/resources/**/*"]),
    test_class = "net.hollowcube.mapmaker.map.MapTestSuite",
    deps = [
        ":map",
        "@maven//:com_google_code_gson_gson",
        "@maven//:net_kyori_adventure_api",
        "@maven//:net_minestom_minestom_snapshots",
        "//modules/common",
        "//modules/core",
        #        "//modules/command",
        #        "//modules/common",
        "//modules/test",
        #        "//third_party:minestom",
        #        #        "@maven//:com_github_mworzala_mc_debug_renderer_minestom",
        #        "@maven//:it_unimi_dsi_fastutil",
        #        "@maven//:net_kyori_adventure_api",
        #        "@maven//:net_kyori_adventure_text_serializer_plain",
    ],
)
