load("@contrib_rules_jvm//java:defs.bzl", "JUNIT5_DEPS", "java_junit5_test")
load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "nbs",
    srcs = glob(include = ["src/main/java/**/*.java"]),
    resources = glob(include = ["src/main/resources/**/*"]),
    visibility = ["//visibility:public"],
    deps = [
        "//modules/common",
        "//third_party:minestom",
        "@maven//:net_kyori_adventure_api",
        "@maven//:org_jetbrains_annotations",
    ],
)
