load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "posthog",
    srcs = glob(include = ["src/main/java/**/*.java"]),
    resources = glob(include = ["src/main/resources/**/*"]),
    visibility = ["//visibility:public"],
    deps = [
        "//modules/common",
        "@maven//:com_github_hollow_cube_datafixerupper",
        "@maven//:com_google_code_gson_gson",
        "@maven//:org_jetbrains_annotations",
        "@maven//:org_slf4j_slf4j_api",
    ],
)
