load("@rules_java//java:defs.bzl", "java_binary", "java_library")

java_library(
    name = "script-engine",
    srcs = glob(include = [
        "src/main/java/**/*.java",
    ]),
    resources = glob(include = [
        "src/main/resources/**/*",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "//modules/common",
        "//modules/core",
        "//third_party:adventure_all",
        "//third_party:auto_service",
        "//third_party:minestom",
        "//third_party/react",
        "@maven//:com_google_code_gson_gson",
        "@maven//:it_unimi_dsi_fastutil",
        "@maven//:org_graalvm_polyglot_polyglot",
        "@maven//:org_graalvm_truffle_truffle_api",
        "@maven//:org_slf4j_jul_to_slf4j",
    ],
)
